# Multicore-POSIX-Threads

./: CMakeLists.txt
headers/: hello_world.h  sync_basics_mutexes.h  thread_basics_creation.h  thread_basics_creation_multiple_threads.h  thread_basics_join_detach.h  thread_basics_termination.h
src/: Hello_World.c  Thread Execution.c  Thread_Concepts.c
src/Mutexes/: 5_Sync_Basics_Mutex.c
src/Thread Management/: 1_Thread_Basics_Creation.c  2_Thread_Basics_Multiple_Threads_Creation.c  3_Thread_Basics_Termination.c  4_Thread_Basics_Join_Detach.c
